teal menu now works on mobile and fixed small padding issue on active link

--- a/powo-portal/src/main/frontend/src/sass/pages/_static.scss
+++ b/powo-portal/src/main/frontend/src/sass/pages/_static.scss
@@ -11,7 +11,6 @@
     @media (min-width: $screen-sm-min) {
       display: flex;
     }
-    display: none;
     background-color: $kew-teal;
     text-align: center;
     height: 60px;
@@ -24,7 +23,7 @@
       li {
         display: inline-block;
         width: 167px;
-        padding: 18px;
+        padding: 19px;
         &.active {
           background-color: $kew-medium-teal;
         }
